force-app/main/default/objects/ApexEmailDistributions__c/ApexEmailDistributions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Apex Email Distributions</label>
</CustomObject>