force-app/main/default/objects/ApexEmailDistributions__c/fields/Emails1__c.field-meta.xml
<CustomField>
    <fullName>Emails1__c</fullName>
    <description>Separated by commas</description>
    <inlineHelpText>Separated by commas</inlineHelpText>
    <label>Emails1</label>
    <type>TextArea</type>
</CustomField>