force-app/main/default/objects/ApexEmailDistributions__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <description>Separated by commas</description>
    <inlineHelpText>Separated by commas</inlineHelpText>
    <label>Emails</label>
    <type>TextArea</type>
</CustomField>